--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-tags-input-updated",
+  "name": "ng-tags-with-duplicates",
   "version": "2.1.1",
   "location": "https://github.com/junajan/ngTagsInput-bower/",
   "main": [
